# cdict

./: README.md  cdict-tool.opam  cdict.opam  dfa.opam  dune-project
cdict-tool/: build.ml  dune  main.ml  query.ml  stats.ml
cdict-tool/aosp_parser/: lexer.mll
java/: dune
java/jni/: juloo_cdict.h  juloo_cdict_Cdict.c  juloo_cdict_Cdict.h
java/juloo.cdict/: Cdict.java
libcdict/: dune  libcdict.c  libcdict.h  libcdict_format.h
ocaml/: cdict.ml  cdict_builder.ml  cdict_stubs.c  cdict_writer.ml  cdict_writer.mli  dune
ocaml-cdict/: cdict.ml  cdict_stubs.c
ocaml-cdict/builder/: cdict_builder.ml  cdict_builder.mli  sized_int_array.ml  sized_int_array.mli
ocaml-dfa/: dfa.mli
ocaml/builder/: cdict_builder.ml  cdict_builder.mli  dune
ocaml/dfa/: dfa.ml  dfa.mli
tests/dfa/: dfa_test.ml
tests/java/java.t/: run.t
tests/java/java.t/juloo.cdict.tests/: CdictJavaTests.java
tests/ocaml/: complete_tree.ml  dune  sized_int_array.ml  unit.ml
tests/tool/: dune
tests/tool/aliases.t/: run.t  words.combined
tests/tool/aosp.t/: run.t
tests/tool/plain_text.t/: run.t
tests/tool/substitutions.t/: run.t
