(rule
 (targets
  (dir classes)
  (dir gen_interfaces))
 (package cdict-java)
 (action
  (run javac -d classes -h gen_interfaces %{dep:juloo.cdict/Cdict.java})))

(rule
 (target libcdict_java.so)
 (deps
  (source_tree jni)
  ../libcdict/libcdict.h)
 (action
  (run
   %{cc}
   -o
   %{target}
   -shared
   -I
   ../libcdict
   -I
   jni
   %{dep:../libcdict/libcdict.o}
   %{dep:jni/juloo_cdict_Cdict.c})))

(rule
 (target cdict_java.jar)
 (deps classes)
 (action
  (run jar -cf %{target} -C classes/ .)))

(subdir
 jni
 (rule
  (mode promote)
  (package cdict-java)
  (action
   (copy ../gen_interfaces/juloo_cdict_Cdict.h juloo_cdict_Cdict.h))))
